# divvun-runtime

./: .gitignore  404.html  Cargo.toml  Justfile  LICENSE-MIT  README.md  build.ps1  build.rs  index.html  make-tts-venv.ps1  make-tts-venv.sh  play-sound.ps1  pyo3-mac.txt  pyo3.txt  pyoxidizer.bzl  sitemap.xml  x.ps1
.cargo/: config.toml
.github/workflows/: docs.yml
bindings/c/: divvun_runtime.h
bindings/deno/: deno.jsonc  mod.ts
bindings/deno/test/: mod.ts
bindings/example/: test.ts
bindings/java/: pom.xml
bindings/java/src/main/java/com/divvun/runtime/: Bundle.java  DivvunRuntimeLibrary.java  PipelineHandle.java  PipelineResponse.java
bindings/java/src/main/java/com/divvun/runtime/util/: ErrorCallback.java  RustSlice.java
bindings/python/: __init__.py  divvun_runtime.py  example.py
bindings/swift/: Package.swift
bindings/swift/Sources/CDivvunRuntime/: module.modulemap
bindings/swift/Sources/DivvunRuntime/: DivvunRuntime.swift
bindings/swift/Tests/DivvunRuntimeTests/: DivvunRuntimeTests.swift
bindings/swift/include/: divvun_runtime.h
bundles/: index.html
cli/: .gitignore  Cargo.toml  README.md  build.rs  index.html
cli/src/: cli.rs  deno_rt.rs  lib.rs  main.rs  path_utils.rs  py_rt.rs  shell.rs
cli/src/command/: bundle.rs  init.rs  list.rs  mod.rs  playground.rs  run.rs  sync.rs  test.rs  utils.rs  yaml_test.rs
cli/src/command/yaml_test/: error_types.rs  markup.rs  mod.rs  output.rs  parser.rs  runner.rs  sentence.rs  test_result.rs  yaml_file.rs
cli/tests/: markup_tests.rs
cli/tests/yaml_test/: nested_markup_tests.rs
crates/divvun-runtime-ffi/: Cargo.toml
crates/divvun-runtime-ffi/src/: lib.rs
crates/syntax-highlight/: Cargo.toml  theme.tmTheme
crates/syntax-highlight/examples/: html_demo.rs  terminal_demo.rs
crates/syntax-highlight/src/: html.rs  lib.rs  terminal.rs
crates/syntax-highlight/syntaxes/: cg3.sublime-syntax
docs/: mkdocs.yml
docs/docs/: bundles.md  cli.md  index.md  installation.md  modules.md  pipelines.md  quick-start.md
docs/docs/grammar/: config.md  error-system.md  example.md  overview.md
docs/docs/reference/: configuration.md  troubleshooting.md
docs/docs/tts/: example.md  overview.md
examples/: ast.json  example.c  print_inventory.rs  repl.rs  test.rs
grammar/config/: index.html
grammar/error-system/: index.html
grammar/example/: index.html
grammar/overview/: index.html
headers/: divvun_runtime.h
installation/: index.html
macros/: Cargo.toml
macros/src/: lib.rs
modules/: index.html
pipelines/: index.html
playground/: PLAN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
playground/public/fonts/iosevka/: README.md
playground/src/: App.css  App.tsx  types.ts
playground/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
playground/src-tauri/capabilities/: default.json
playground/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  syntax.rs
playground/src-tauri/syntaxes/: cg3.sublime-syntax
playground/src/components/: ConfigEditor.tsx  FluentTester.tsx  InputEditor.tsx  InteractiveOutput.tsx  PipelineOutput.tsx  TabBar.tsx  TabContent.tsx
playground/src/contexts/: TabContext.tsx  WindowContext.tsx
python/: __init__.py  cg3.py  divvun.py  hfst.py  speech.py  test_ast.py
quick-start/: index.html
reference/configuration/: index.html
reference/troubleshooting/: index.html
search/: search_index.json
src/: bundle.rs  ffi.rs  init.py  init.ts  lib.rs  main.rs  oslog.rs  py.rs  repl.rs  ts.rs  util.rs
src/ast/: mod.rs
src/modules/: cg3.rs  cg3_util.rs  debug.rs  divvun.rs  example.rs  hfst.rs  jq.rs  mod.rs  runtime.rs  speech.rs  speech_old.rs  spell.rs  ssml.rs
src/modules/divvun/: blanktag.rs  cgspell.rs  mod.rs  normalize.rs  suggest.rs
src/py_rt/: mod.rs
src/util/: fluent_loader.rs  mod.rs  shared_box.rs
tts/example/: index.html
tts/overview/: index.html
xml-conv/: Cargo.toml
xml-conv/src/: fluent.rs  kdl.rs  lib.rs  main.rs
