[package]
name = "divvun-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "divvun_runtime"
#crate-type = ["lib", "rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.77"
box-format = { git = "https://github.com/bbqsrc/box", default-features = false, features = ["reader"] }
cg3 = { version = "0.1.0", git = "ssh://git@github.com/necessary-nu/cg3-rs", optional = true }
divvunspell = { git = "https://github.com/divvun/divvunspell", branch = "feature/analysis" }
futures-util = "0.3.30"
hfst = { optional = true, git = "ssh://git@github.com/necessary-nu/hfst-rs" }
indexmap = { version = "2.2.2", features = ["serde"] }
inventory = "0.3.15"
log = "0.4.20"
once_cell = "1.19.0"
# oslog = "0.2.0"
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
slab = "0.4.9"
tempfile = "3.8.1"
thiserror = "1.0.56"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pathos = "0.3.0"
cffi = { git = "https://github.com/cffi-rs/cffi", branch = "next" }
heck = "0.5.0"
memmap2 = "0.9.4"
divvun-speech = { optional = true, git = "ssh://git@github.com/necessary-nu/divvun-speech-rs", branch = "multi-lang" }
ssml-parser = { version = "0.1.4", features = ["async"], optional = true}
bitmask-enum = "2.2.5"
hound = "3.5.1"
async-stream = "0.3.6"
# oslog = "0.2.0"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc"] }

[profile.dev]
incremental = false
rpath = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = 3
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true
rpath = true

[features]
default = ["mod-hfst", "mod-cg3", "mod-divvun", "mod-speech", "mod-ssml"]
mod-hfst = ["hfst"]
mod-cg3 = ["cg3"]
mod-divvun = []
mod-speech = ["divvun-speech", "mod-hfst"]
mod-ssml = ["ssml-parser"]
ffi = []

[workspace]
members = [".", "cli"]

