[package]
name = "divvun-runtime"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/divvun/divvun-runtime"

[lib]
name = "divvun_runtime"
#crate-type = ["lib", "rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.71"
async-trait = "0.1.77"
box-format = { git = "https://github.com/bbqsrc/box", default-features = false, features = ["reader"] }
cg3 = { version = "0.1.0", git = "https://github.com/divvun/cg3-rs" }
divvunspell = { git = "https://github.com/divvun/divvunspell", branch = "feature/analysis" }
futures-util = "0.3.30"
hfst = { git = "https://github.com/divvun/hfst-rs" }
indexmap = { version = "2.10.0", features = ["serde"] }
inventory = "0.3.15"
log = "0.4.20"
once_cell = "1.19.0"
# oslog = "0.2.0"
rayon = "1.8.1"
regex = "1.10.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
slab = "0.4.10"
tempfile = "3.8.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pathos = "0.3.0"
cffi = { git = "https://github.com/cffi-rs/cffi", branch = "next" }
heck = "0.5.0"
memmap2 = "0.9.5"
divvun-speech = { git = "https://github.com/divvun/divvun-speech-rs" }
ssml-parser = { version = "0.1.4", features = ["async"] }
bitmask-enum = "2.2.5"
hound = "3.5.1"
async-stream = "0.3.6"
fluent = { git = "https://github.com/divvun/fluent-rs" }
fluent-bundle = { git = "https://github.com/divvun/fluent-rs" }
fluent-syntax = { git = "https://github.com/divvun/fluent-rs" }
unic-langid = { version = "0.9.5", features = ["unic-langid-macros"] }
glob = "0.3.1"

[dependencies]
cg3 = { workspace = true, optional = true }
divvun-speech = { workspace = true, optional = true }
ssml-parser = { workspace = true, optional = true }
hfst = { workspace = true, optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
box-format = { workspace = true }
divvunspell = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
inventory = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
slab = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pathos = { workspace = true }
cffi = { workspace = true }
heck = { workspace = true }
memmap2 = { workspace = true }
bitmask-enum = { workspace = true }
hound = { workspace = true }
async-stream = { workspace = true }
fluent = { workspace = true }
fluent-bundle = { workspace = true }
fluent-syntax = { workspace = true }
unic-langid = { workspace = true }
glob = { workspace = true }
divvun-runtime-macros = { path = "macros" }
# oslog = "0.2.0"

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo", "rustc"] }

[profile.dev]
incremental = false
rpath = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = 3
panic = "abort"
split-debuginfo = "packed"
strip = "symbols"
incremental = true
rpath = true

[features]
default = ["all-mods"]
all-mods = ["mod-hfst", "mod-cg3", "mod-divvun", "mod-speech", "mod-ssml"]
mod-hfst = ["hfst"]
mod-cg3 = ["cg3"]
mod-divvun = []
mod-speech = ["divvun-speech", "mod-hfst"]
mod-ssml = ["ssml-parser"]
ffi = []

[workspace]
members = [".", "cli", "xml-conv", "macros"]

