[package]
name = "divvun-runtime-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divvun-runtime"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["env", "derive"] }
divvun-runtime = { version = "0.1.0", default-features = false, path = ".." }
libc = "0.2.153"
rustyline = "13.0.0"
tempfile = "3.9.0"
termcolor = "1.4.1"
tokio = { version = "1.36.0", features = ["full"] }
box-format = { git = "https://github.com/bbqsrc/box", features = ["reader", "writer"] }
serde_json = "1.0.113"
tracing-subscriber = "0.3.18"
pathos = "0.3.0"
fwdansi = "1.1.0"
once_cell = "1.19.0"
pyo3 = { git = "https://github.com/bbqsrc/pyo3", default-features = false }
pyembed = { git = "https://github.com/divvun/PyOxidizer", branch = "divvun" }
thiserror = "1.0.63"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.15"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
]

[build-dependencies]
fs_extra = "1.3.0"
