[package]
name = "divvun-runtime-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "divvun-runtime"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divvun-runtime = { version = "0.1.0", default-features = false, path = ".." }
clap = { version = "4.5.41", features = ["env", "derive"] }
fwdansi = "1.1.0"
termcolor = "1.4.1"
libc = "0.2.174"
rustyline = "16.0.0"
anyhow.workspace = true # = "1.0.79"
tempfile.workspace = true # = "3.9.0"
tokio.workspace = true # = { version = "1.36.0", features = ["full"] }
box-format = { workspace = true, features = ["reader", "writer"] }
serde_json.workspace = true # = "1.0.113"
tracing-subscriber.workspace = true # = "0.3.18"
pathos.workspace = true # = "0.3.0"
once_cell.workspace = true # = "1.19.0"
thiserror.workspace = true # = "1.0.63"
futures-util.workspace = true # = "0.3.31"
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.15"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60.2"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
]

[build-dependencies]
fs_extra = "1.3.0"
