[package]
name = "divvun-runtime-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/divvun/divvun-runtime"
license = "GPL-3.0"

[[bin]]
name = "divvun-runtime"
path = "src/main.rs"

[features]
ffi = ["divvun-runtime/ffi"]

[dependencies]
divvun-runtime = { default-features = false, path = ".." }
clap = { version = "4.5.47", features = ["env", "derive"] }
fwdansi = "1.1.0"
termcolor = "1.4.1"
libc = "0.2.175"
rustyline = "17.0.1"
walkdir = "2"
anyhow.workspace = true
tempfile.workspace = true
tokio.workspace = true
box-format = { workspace = true, features = ["reader", "writer"] }
serde_json.workspace = true
tracing-subscriber.workspace = true
pathos.workspace = true
once_cell.workspace = true
thiserror.workspace = true
futures-util.workspace = true
tracing.workspace = true
regex.workspace = true
crossterm.workspace = true

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.15"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61.0"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
]

[build-dependencies]
fs_extra = "1.3.0"
