[package]
name = "divvun-rt-playground"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "divvun_rt_playground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
divvun-runtime = { path = "../.." }
syntax-highlight = { path = "../../crates/syntax-highlight", features = ["html"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.11.3"
fluent = { git = "https://github.com/divvun/fluent-rs" }
fluent-bundle = { git = "https://github.com/divvun/fluent-rs" }
fluent-syntax = { git = "https://github.com/divvun/fluent-rs" }
html-escape = "0.2.13"
base64 = "0.22"
facet = "0.29"

[patch.crates-io]
tch = { git = "https://github.com/bbqsrc/tch-rs", version = "0.20", branch = "oof3" }
torch-sys = { git = "https://github.com/bbqsrc/tch-rs", version = "0.19", branch = "oof3" }

# Need this because parent workspace must not include this
[workspace]
