[package]
name = "divvun-rt-playground"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2024"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "divvun_rt_playground_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
uuid = { version = "1", features = ["v4"] }
html-escape = "0.2.13"
base64 = "0.22"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
divvun-runtime = { path = "../..", default-features = false, features = ["mod-hfst", "mod-cg3", "mod-divvun", "mod-ssml", "mod-jq"] }
syntax-highlight = { path = "../../crates/syntax-highlight", features = ["html"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
fluent = { workspace = true }
fluent-bundle = { workspace = true }
fluent-syntax = { workspace = true }
facet = { workspace = true }

[target.'cfg(not(target_os = "ios"))'.dependencies]
divvun-runtime = { path = "../..", features = ["mod-speech"] }
